# stock-pipeline

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
dagster_stock/: __init__.py  definitions.py
dagster_stock/assets/: __init__.py
dagster_stock/assets/bronze/: __init__.py  agent_actions.py  market_stats.py  order_book.py  orders.py  quotes.py  trades.py  trading_halts.py
dagster_stock/assets/gold/: __init__.py  agent_pnl.py  circuit_breaker.py  market_quality.py  ohlcv.py
dagster_stock/assets/invalid/: __init__.py  orders.py  quotes.py  trades.py
dagster_stock/assets/reference/: __init__.py  agent_type_map.py  order_side_map.py  order_type_map.py  symbols.py
dagster_stock/assets/silver/: __init__.py  orders.py  quotes.py  trades.py
dagster_stock/assets/staging/: __init__.py  (+3 more)
dagster_stock/checks/: __init__.py  gold_checks.py  gx_suites.py  silver_checks.py
dagster_stock/io_managers/: __init__.py  parquet_io_manager.py
dagster_stock/jobs/: __init__.py  jobs.py
dagster_stock/resources/: __init__.py  duckdb_resource.py  kafka_resource.py  storage_resource.py
dagster_stock/schedules/: __init__.py  schedules.py
dagster_stock/sensors/: __init__.py  freshness_sensor.py  kafka_sensor.py
dagster_stock/utils/: __init__.py  schemas.py  simulator.py  validation.py  ws_to_kafka.py
monitoring/: prometheus.yml
tests/: conftest.py
tests/test_assets/: test_bronze_trades.py  test_gold_ohlcv.py  test_silver_trades.py
tests/test_checks/: test_quality_checks.py
(+2 files in other folders)
