[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-stock"
version = "0.1.0"
description = "Stock Exchange Data Pipeline — Bronze / Silver / Gold on Dagster"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "dagster>=1.7,<2.0",
    "dagster-webserver>=1.7,<2.0",

    # Data processing
    "pandas>=2.2",
    "pyarrow>=15.0",

    # Storage
    "duckdb>=0.10",
    "boto3>=1.34",        # S3 / MinIO
    "s3fs>=2024.2,!=2025.3.1",

    # Messaging
    "confluent-kafka>=2.3",

    # Validation
    "pydantic>=2.6",
    "great-expectations>=0.18",

    # Utilities
    "websockets>=12.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "dagster-pipes>=1.7",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.dagster]
module_name = "dagster_stock.definitions"

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_stock*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
